templates/nginx-flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    service: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    name: nginx
  - port: 5000
    targetPort: 5000
    name: flask
  type: NodePort
