templates/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
  - host: pdata.world
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
